--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <body>
     <div class="rizz">
-        <p class="cat"></p>
+        <p>hello?? is this even working</p>
+        <p class="cat">.</p>
     </div>
 </body>
 
