--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 
 <body>
     <div class="rizz">
-        <p>hello?? is this even working</p>
-        <p class="cat">.</p>
+        <p class="cat"></p>
     </div>
 </body>
 
